# fishy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: release.yml  rust.yml
src/: constants.rs  lock_file.rs  main.rs  schema_file.rs
src/commands/: build.rs  deploy.rs  init.rs  mod.rs  update.rs
src/commands/update/: mod.rs  print.rs
src/lib/: client.rs  lib.rs  lock_file.rs  schema_file.rs
src/lib/utils/: key_pair.rs  mod.rs
src/utils/: files.rs  key_pair.rs  mod.rs  print.rs  terminal.rs
