[package]
name = "fishy"
version = "0.1.0"
authors = [
  "adz <x12@adz.garden>",
  "sandreae <contact@samandreae.com>",
]
edition = "2021"
description = "Create, manage and deploy p2panda schemas"
repository = "https://github.com/p2panda/fishy"
license = "AGPL-3.0-or-later"
readme = "README.md"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive"] }
comfy-table = "7.0.1"
console = "0.15.7"
dialoguer = "0.10.4"
gql_client = "1.0.7"
hex = "0.4.3"
indicatif = "0.17.5"
p2panda-rs = { version = "0.8.0", features = ["test-utils"] }
path-clean = "1.0.1"
serde = { version = "1.0.174", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt"] }
toml = "0.7.6"
topological-sort = "0.2.2"
